; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Proto_OpenVPN.c_OvsGetMd.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Proto_OpenVPN.c_OvsGetMd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OPENVPN_DEFAULT_MD = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @OvsGetMd(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  store i8* %0, i8** %2, align 8
  store i32* null, i32** %3, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = call i32 @IsEmptyStr(i8* %4)
  %6 = icmp eq i32 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load i8*, i8** %2, align 8
  %9 = call i32* @NewMd(i8* %8)
  store i32* %9, i32** %3, align 8
  br label %10

10:                                               ; preds = %7, %1
  %11 = load i32*, i32** %3, align 8
  %12 = icmp eq i32* %11, null
  br i1 %12, label %13, label %16

13:                                               ; preds = %10
  %14 = load i8*, i8** @OPENVPN_DEFAULT_MD, align 8
  %15 = call i32* @NewMd(i8* %14)
  store i32* %15, i32** %3, align 8
  br label %16

16:                                               ; preds = %13, %10
  %17 = load i32*, i32** %3, align 8
  ret i32* %17
}

declare dso_local i32 @IsEmptyStr(i8*) #1

declare dso_local i32* @NewMd(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
